[gd_scene load_steps=14 format=3 uid="uid://bjgbbyjwa4wic"]

[ext_resource type="Texture2D" uid="uid://cwnue410qbr20" path="res://Images/Ship/Ship.png" id="1_4tso5"]
[ext_resource type="Script" path="res://Scripts/Ship.gd" id="1_ihv3n"]
[ext_resource type="AudioStream" uid="uid://b6h74kobcyktj" path="res://Audio/PlayerShoot.ogg" id="3_rbtp7"]

[sub_resource type="Animation" id="Animation_7i0pi"]
resource_name = "Default"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_7dw58"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtxny"]
_data = {
"Default": SubResource("Animation_7i0pi"),
"RESET": SubResource("Animation_7dw58")
}

[sub_resource type="Gradient" id="Gradient_tt4lf"]
colors = PackedColorArray(0, 0, 0, 0.545098, 0, 0, 0, 0.498039)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a35e6"]
size = Vector2(18, 2)

[sub_resource type="Animation" id="Animation_qwrsc"]
resource_name = "Shoot"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.486275, 0.831373, 1, 1), Color(0.486275, 0.831373, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 5.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jei6"]
_data = {
"Shoot": SubResource("Animation_qwrsc")
}

[sub_resource type="Animation" id="Animation_r27cu"]
resource_name = "Die"

[sub_resource type="Animation" id="Animation_hl6vg"]
resource_name = "Spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.717647, 0.937255, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8fbx"]
_data = {
"Die": SubResource("Animation_r27cu"),
"Spawn": SubResource("Animation_hl6vg")
}

[node name="Ship" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_ihv3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4tso5")
hframes = 2

[node name="Default Jet Animation" type="AnimationPlayer" parent="Sprite2D"]
autoplay = "Default"
libraries = {
"": SubResource("AnimationLibrary_vtxny")
}

[node name="Jet Fumes" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 12)
amount = 15
emission_shape = 3
emission_rect_extents = Vector2(6, 1)
gravity = Vector2(0, 115)
initial_velocity_max = 1.0
angular_velocity_max = 1.0
scale_amount_min = 1.5
scale_amount_max = 2.0
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_tt4lf")

[node name="Area2D" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1.78814e-07, 0.906251)
scale = Vector2(0.763889, 0.9375)
polygon = PackedVector2Array(-2.61818, 5.43333, -3.92727, 2.23333, -2.61818, -4.16667, 2.61818, -4.16667, 3.92727, 2.23333, 2.61818, 5.43333, -2.34084e-07, 4.36667)

[node name="Wall Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_a35e6")

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SpecialStateAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jei6")
}

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rbtp7")

[node name="SpawnAndDie" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
libraries = {
"": SubResource("AnimationLibrary_y8fbx")
}

[node name="Invincibility" type="Timer" parent="."]
wait_time = 1.75

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ShootDelay" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Invincibility" to="." method="_on_invincibility_timeout"]
